@@ -1,8 +1,10 @@
 package com.help.erpweb.domain.menu.service;
 
-import com.help.erpweb.domain.metadata.response.ColumnMetaDto;
 import com.help.erpweb.domain.menu.dto.request.repository.MenuDto;
+import com.help.erpweb.domain.menu.projection.MenuProjection;
 import com.help.erpweb.domain.menu.repository.MenuRepository;
+import com.help.erpweb.domain.metadata.response.ColumnMetaDto;
+import com.help.global.authorization.Authorization;
 import com.help.global.common.response.ApiResponse;
 import com.help.global.data.MembershipID;
 import com.help.global.jwt.CustomUser;
@@ -11,93 +13,228 @@ import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class MenuService {
+
     private final MenuRepository menuRepository;
+    private final Authorization authorization;
 
     @PersistenceContext
     private final EntityManager entityManager;
 
-    public ApiResponse<?> getMenuList(CustomUser user) {
-        String discordId = user.getUsername();
+    public ApiResponse<?> getMenuList(
+            CustomUser user,
+            int page,
+            int size,
+            String searchColumn,
+            String searchValue,
+            String sortColumn,
+            String sortDirection
+    ) {
+        int normalizedPage = Math.max(page, 1);
+        int normalizedSize = Math.max(size, 1);
 
-        String sk = (String) entityManager
-                .createNativeQuery("SELECT Constellation_Network.search_sk(:cardType, :membershipId)")
-                .setParameter("cardType", MembershipID.discord.name())
-                .setParameter("membershipId", discordId)
-                .getSingleResult();
+        String recommender = null;
 
-        List<ColumnMetaDto> metadata = menuRepository.findColumnMetas(
-                menuRepository.schemaName,  menuRepository.tableName)
-                .stream()
-                .map(v -> ColumnMetaDto.builder()
-                        .colName(v.getColName())
-                        .isPrimary(v.getIsPrimary())
-                        .isNullable(v.getIsNullable())
-                        .build())
-                .toList();
+        if (!authorization.isAdmin(user)) {
+            recommender =
+                    findSkByDiscordId(
+                            user.getUsername()
+                    );
+        }
 
-        List<MenuDto> menuList = menuRepository.findByRecommender(sk)
-                .stream()
-                .map(entity -> MenuDto.builder()
-                        .mnValue(entity.getMnValue())
-//                        .recommender(entity.getRecommender())
-                        .build())
-                .toList();
+        List<ColumnMetaDto> metadata =
+                menuRepository.findColumnMetas(
+                                MenuRepository.schemaName,
+                                MenuRepository.tableName
+                        )
+                        .stream()
+                        .map(v ->
+                                ColumnMetaDto.builder()
+                                        .colName(v.getColName())
+                                        .isPrimary(v.getIsPrimary())
+                                        .isNullable(v.getIsNullable())
+                                        .build()
+                        )
+                        .toList();
 
-        Map<String, Object> body = new HashMap<>();
+        Set<String> allowedColumns =
+                metadata.stream()
+                        .map(ColumnMetaDto::getColName)
+                        .collect(Collectors.toSet());
+
+        Page<MenuProjection> menuPage =
+                menuRepository.findPage(
+                        recommender,
+                        normalizedPage - 1,
+                        normalizedSize,
+                        searchColumn,
+                        searchValue,
+                        sortColumn,
+                        sortDirection,
+                        allowedColumns
+                );
+
+        List<MenuDto> menuList =
+                menuPage.getContent()
+                        .stream()
+                        .map(entity ->
+                                MenuDto.builder()
+                                        .mnValue(
+                                                entity.getMnValue()
+                                        )
+                                        .recommender(
+                                                entity.getRecommender()
+                                        )
+                                        .build()
+                        )
+                        .toList();
+
+        Map<String, Object> body =
+                new HashMap<>();
+
         body.put("metadata", metadata);
         body.put("entities", menuList);
+        body.put("page", normalizedPage);
+        body.put("size", normalizedSize);
+        body.put(
+                "totalElements",
+                menuPage.getTotalElements()
+        );
+        body.put(
+                "totalPages",
+                menuPage.getTotalPages()
+        );
+        body.put(
+                "hasNext",
+                menuPage.hasNext()
+        );
+
         return ApiResponse.success(body);
     }
 
     @Transactional
-    public ApiResponse<?> saveAll(CustomUser user, List<MenuDto> menuList) {
-        if (menuList == null || menuList.isEmpty())
-            return ApiResponse.success("No data to save");
-
-        List<String> results = new ArrayList<>();
-        for (MenuDto dto : menuList) {
-            String result = menuRepository.callMenuProcedure(
-                    MembershipID.discord.name(),
-                    user.getUsername(),
-                    dto.getMnValue()
+    public ApiResponse<?> saveAll(
+            CustomUser user,
+            List<MenuDto> menuList
+    ) {
+        if (menuList == null
+                || menuList.isEmpty()) {
+            return ApiResponse.success(
+                    "No data to save"
             );
-            results.add(dto.getMnValue()+" 추천 결과 : "+result);
         }
+
+        List<String> results =
+                new ArrayList<>();
+
+        for (MenuDto dto : menuList) {
+            String result =
+                    menuRepository.callMenuProcedure(
+                            MembershipID.discord.name(),
+                            dto.getRecommender(),
+                            dto.getMnValue()
+                    );
+
+            results.add(
+                    dto.getMnValue()
+                            + " 추천 결과 : "
+                            + result
+            );
+        }
+
         return ApiResponse.success(results);
     }
 
     @Transactional
-    public ApiResponse<?> deleteAll(CustomUser user, List<MenuDto> menuList) {
-        if (menuList == null || menuList.isEmpty())
-            return ApiResponse.success("No data to delete");
+    public ApiResponse<?> deleteAll(
+            CustomUser user,
+            List<MenuDto> menuList
+    ) {
+        if (menuList == null
+                || menuList.isEmpty()) {
+            return ApiResponse.success(
+                    "No data to delete"
+            );
+        }
 
-        String discordId = user.getUsername();
-        String recommender = (String) entityManager
-                .createNativeQuery("SELECT Constellation_Network.search_sk(:cardType, :membershipId)")
-                .setParameter("cardType", MembershipID.discord.name())
-                .setParameter("membershipId", discordId)
-                .getSingleResult();
+        int delCount = 0;
 
-        // teacher가 모두 동일하다는 전제에서만 사용 가능
-        List<String> values = menuList.stream()
-                .map(MenuDto::getMnValue)
-                .distinct()
-                .toList();
+        Map<String, List<String>> valuesByRecommender =
+                menuList.stream()
+                        .collect(
+                                Collectors.groupingBy(
+                                        MenuDto::getRecommender,
+                                        Collectors.mapping(
+                                                MenuDto::getMnValue,
+                                                Collectors.toList()
+                                        )
+                                )
+                        );
 
-        int totalCount = values.toArray().length;
-        int delCount = menuRepository.deleteByMnValue(recommender, values);
-        String result = "총 "+totalCount+"행 중 "+delCount+"행 삭제됨";
+        for (Map.Entry<String, List<String>> entry
+                : valuesByRecommender.entrySet()) {
+
+            String recommenderSk =
+                    findSkByDiscordId(
+                            entry.getKey()
+                    );
+
+            List<String> values =
+                    entry.getValue()
+                            .stream()
+                            .distinct()
+                            .toList();
+
+            delCount +=
+                    menuRepository.deleteByMnValue(
+                            recommenderSk,
+                            values
+                    );
+        }
+
+        int totalCount = menuList.size();
+
+        String result =
+                "총 "
+                        + totalCount
+                        + "행 중 "
+                        + delCount
+                        + "행 삭제됨";
+
         return ApiResponse.success(result);
+    }
+
+    private String findSkByDiscordId(
+            String discordId
+    ) {
+        return (String) entityManager
+                .createNativeQuery("""
+                    SELECT Constellation_Network.search_sk(
+                        :cardType,
+                        :membershipId
+                    )
+                """)
+                .setParameter(
+                        "cardType",
+                        MembershipID.discord.name()
+                )
+                .setParameter(
+                        "membershipId",
+                        discordId
+                )
+                .getSingleResult();
     }
 }
